fix slider heading color on light mode hide default scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,15 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
   }
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  body::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
 
 @layer base {
